--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,9 @@ services:
       - '80:80'
       - '443:443'
     restart: always
+    networks:
+      - v2board_net
+
   mysql:
     image: mysql:5.7.29
     volumes:
@@ -21,3 +24,8 @@ services:
     environment: 
       MYSQL_ROOT_PASSWORD: v2boardisbest
       MYSQL_DATABASE: v2board
+    networks:
+      - v2board_net
+
+networks:
+   v2board_net:
