--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,3 +11,14 @@ autostart=true
 autorestart=true
 startretries=0
 numprocs=4
+
+[program:horizon]
+command=php /www/artisan horizon
+stdout_logfile=/wwwlogs/horizon.log
+stdout_logfile_maxbytes=0
+stderr_logfile=/wwwlogs/horizon_error.log
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startretries=0
+numprocs=1
