--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   www:
-    image: tokumeikoi/lcrp
+    image: ukid/v2board:master
     volumes:
       - './www:/www'
       - './wwwlogs:/wwwlogs'
