--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   www:
-    image: ukid/v2board:master
+    image: ukid/v2board:latest
     volumes:
       - './www:/www'
       - './wwwlogs:/wwwlogs'
@@ -17,7 +17,7 @@ services:
       - v2board_net
 
   mysql:
-    image: mysql:5.7.29
+    image: mysql:8.0.30
     volumes:
       - './mysql:/var/lib/mysql'
     restart: always
